--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -3,8 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/menuOpenVideo"
+        android:id="@+id/menuOpen"
         android:icon="@android:drawable/ic_menu_gallery"
-        android:title="Open Video"
+        android:title="Open"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/menuStabilize"
+        android:icon="@android:drawable/ic_popup_sync"
+        android:title="Stabilize"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/menuSave"
+        android:icon="@android:drawable/ic_menu_save"
+        android:title="Save"
         app:showAsAction="always" />
 </menu>
