--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,7 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
-                android:text="Output FPS:" />
+                android:text="FPS:" />
 
             <Spinner
                 android:id="@+id/fps"
@@ -114,7 +114,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
-                android:text="ViewMode:" />
+                android:text="View:" />
 
             <Spinner
                 android:id="@+id/viewMode"
