--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -17,4 +17,9 @@
         android:icon="@android:drawable/ic_menu_save"
         android:title="Save"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/menuSettings"
+        android:icon="@android:drawable/ic_menu_preferences"
+        android:title="Settings"
+        app:showAsAction="always" />
 </menu>
