--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -131,59 +131,23 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/layoutViewMode"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingTop="5dp"
-            android:paddingBottom="10dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:text="View:" />
-
-            <Spinner
-                android:id="@+id/viewMode"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:entries="@array/view_mode"
-                android:spinnerMode="dropdown" />
-        </LinearLayout>
-
-        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="fill_horizontal"
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/buttonEditMask"
+                android:id="@+id/playOriginal"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:enabled="false"
                 android:textAllCaps="false"
-                app:icon="@android:drawable/ic_menu_edit"
+                app:icon="@android:drawable/ic_menu_slideshow"
                 app:iconGravity="textEnd" />
 
             <Button
-                android:id="@+id/buttonStabilize"
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_weight="1"
-                android:textAllCaps="false"
-                app:icon="@android:drawable/ic_popup_sync"
-                app:iconGravity="textEnd" />
-
-            <Button
-                android:id="@+id/play"
+                android:id="@+id/playStabilized"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -203,6 +167,18 @@
                 android:textAllCaps="false"
                 app:icon="@android:drawable/ic_media_pause"
                 app:iconGravity="textEnd" />
+
+            <Button
+                android:id="@+id/editMask"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:enabled="false"
+                android:textAllCaps="false"
+                app:icon="@android:drawable/ic_menu_edit"
+                app:iconGravity="textEnd" />
         </LinearLayout>
 
         <LinearLayout
@@ -211,62 +187,19 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/layoutOriginal"
+            <VideoView
+                android:id="@+id/video"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:paddingTop="5dp">
+                android:layout_gravity="center"
+                android:adjustViewBounds="false"
+                android:scaleType="fitCenter" />
 
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Original"
-                    android:textAlignment="center"
-                    android:textStyle="bold" />
-
-                <VideoView
-                    android:id="@+id/videoOriginal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:adjustViewBounds="false"
-                    android:scaleType="fitCenter" />
-
-                <com.dan.videostab.ImagesAsVideo
-                    android:id="@+id/imagesAsVideoOriginal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="gone" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/layoutStabilized"
+            <com.dan.videostab.ImagesAsVideo
+                android:id="@+id/imagesAsVideo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:paddingTop="5dp">
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Stabilized"
-                    android:textAlignment="center"
-                    android:textStyle="bold" />
-
-                <VideoView
-                    android:id="@+id/videoStabilized"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:adjustViewBounds="false"
-                    android:scaleType="fitCenter" />
-            </LinearLayout>
+                android:visibility="gone" />
 
         </LinearLayout>
 
